--- a/LightningOut.html
+++ b/LightningOut.html
@@ -2,7 +2,7 @@
         <style>
         
         </style>
-        <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js" type="text/Javasxript" ></script>
+        <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js" type="text/Javascript" ></script>
         <div data-lightning-out="true"></div>
         <script>
             const appName = 'c:LightningOutApp'
