--- a/LightningOut.html
+++ b/LightningOut.html
@@ -6,7 +6,7 @@
         <div data-lightning-out="true"></div>
         <script>
             const appName = 'c:LightningOutApp'
-            const componentName = 'c:accountmanagerLDSForms'
+            const componentName = 'c:accountManagerLDS'
             const lightningEndPoint = 'https://informatica29-dev-ed.develop.my.site.com'
             const targetElement = document.querySelector('[data-lightning-out]');
             const componentAttributes = {
