--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My External Webpage</title>
+    <script src="https://mydomain.my.salesforce.com/lightning/lightning.out.js"></script>
+    <script>
+        function init() {
+            // Extract the value of the "message" URL parameter
+            const params = new URLSearchParams(window.location.search);
+            const message = params.get('message');
 
+            // Embed the LWC in the page
+            const lwcElement = document.createElement('my-component');
+            lwcElement.setAttribute('message', message);
+            document.querySelector('#lwc-container').appendChild(lwcElement);
+        }
+    </script>
+</head>
+<body onload="init()">
+    <div id="lwc-container"></div>
+</body>
+</html>
