--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>My External Webpage</title>
-    <script src="https://mydomain.my.salesforce.com/lightning/lightning.out.js"></script>
+    <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js"></script>
     <script>
         function init() {
             // Extract the value of the "message" URL parameter
