--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>My External Webpage</title>
@@ -20,3 +20,4 @@
     <div id="lwc-container"></div>
 </body>
 </html>
+ -->
