--- a/LightningOut.html
+++ b/LightningOut.html
@@ -1,4 +1,4 @@
-<!--     <html>
+    <html>
         <style>
         
         </style>
@@ -32,12 +32,4 @@
             
         </script>
     </html>
- -->
 
-<script src='https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js"></script>
-<div id="lwc-container"></div>
-<script>
-    $Lightning.use("c:LightningOutApp", function() {
-        $Lightning.createComponent("c:accountManageApex", {}, "lwc-container", function() {});
-    });
-</script>
