--- a/LightningOut.html
+++ b/LightningOut.html
@@ -25,6 +25,7 @@
                         targetElement,
                         function(cmp){
                             console.log('Lightning Component Created');
+                             console.log('Id-->'+id);
                         }
                     );
                 },
