--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>My External Webpage</title>
-    <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js"></script>
+    <!-- <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js"></script>
     <script>
         function init() {
             // Extract the value of the "message" URL parameter
@@ -14,10 +14,9 @@
             lwcElement.setAttribute('msg', message);
             document.querySelector('#lwc-container').appendChild(lwcElement);
         }
-    </script>
+    </script> -->
 </head>
-<body onload="init()">
-    <div id="lwc-container"></div>
+<body>
+    <h1>Home Page</h1>
 </body>
 </html>
- -->
