--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             document.querySelector('#lwc-container').appendChild(lwcElement);
         }
     </script> -->
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Home Page</h1>
