--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 </head>
 <body>
     <h1>Home Page</h1>
+    <button onclick="location.href='LightningOut.html'">Navigate</button>
 </body>
 </html>
