--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 <body>
     <h1>Home Page</h1>
-    <button onclick="location.href='LightningOut.html'">Navigate</button>
+<!--     <button onclick="location.href='LightningOut.html'">Navigate</button> -->
+    <div><button>Navigate</button></div>
 </body>
 </html>
