--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         h1{
             text-align: center;
         }
+        #myButton {
+            display: block;
+            margin: 0 auto;
+        }
     </style>
     <!-- <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js"></script>
     <script>
@@ -24,7 +28,6 @@
 </head>
 <body>
     <h1>Home Page</h1>
-<!--     <button onclick="location.href='LightningOut.html'">Navigate</button> -->
-    <div><button>Navigate</button></div>
+    <div><button id="myButton" onclick="location.href='LightningOut.html'">Navigate</button></div>
 </body>
 </html>
