--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 </head>
 <body>
     <h1>Home Page</h1>
-    <div><button id="myButton" onclick="location.href='LightningOut.html'">Navigate</button></div>
+    <div><button id="myButton" onclick="location.href='LightningOut.html?id=1'">Navigate</button></div>
 </body>
 </html>
