--- a/LightningOut.html
+++ b/LightningOut.html
@@ -3,7 +3,7 @@
         
         </style>
         <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js" type="text/javascript"></script>
-        <div data-lightning-out="true"></div>
+        <div id='lwcElement' data-lightning-out="true"></div>
         <script>
             const appName = 'c:LightningOutApp'
             const componentName = 'c:accountManageApex'
