--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     // Pass the input values to the LWC via Lightning Out
     const lwcCmpElement = document.getElementById('lwcElement');
-    lwcCmpElement.sendMessage({id});
+    lwcCmpElement.postMessage({id});
     }
     </script>
     
