--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     
 //     // Add the LWC component to the HTML page
 //     document.body.appendChild(lwcComponent);
-    const lwcComponent = window.frames["lwcIframe"];
-    lwcComponent.postMessage({ id }, "https://rohrat18.github.io/ExternalLWC/LightningOut.html");
+//     const lwcComponent = window.frames["lwcIframe"];
+    window.parent.postMessage({ id }, "https://rohrat18.github.io/ExternalLWC/LightningOut.html");
 }
 
   }
@@ -60,8 +60,8 @@
             <input type="number" id="id" name="id">
             <button type="button" onclick="navigate()">Go</button>
         </form> -->
-        <iframe id="lwcIframe" src="https://rohrat18.github.io/ExternalLWC/LightningOut.html"></iframe>
-
+<!--         <iframe id="lwcIframe" src="https://rohrat18.github.io/ExternalLWC/LightningOut.html"></iframe>
+ -->
         <form>
               <label for="id">Input the Id:</label>
               <input type="number" id="id" name="id">
