--- a/LightningOut.html
+++ b/LightningOut.html
@@ -14,8 +14,8 @@
             console.log('Id-->'+id);       
         // Setting the id value in component attributes
             const componentAttributes = {
-//             recordId: id
-                recordId: event.data.id
+             recordId: id
+       
         };
             $Lightning.use(
                 appName,
