--- a/LightningOut.html
+++ b/LightningOut.html
@@ -10,6 +10,8 @@
             const lightningEndPoint = 'https://informatica29-dev-ed.develop.my.site.com'
             const targetElement = document.querySelector('[data-lightning-out]');
             const urlParams = new URLSearchParams(window.location.search);
+            const id = localStorage.getItem("id");
+
             const id = urlParams.get('id');
             console.log('Id-->'+id);       
         // Setting the id value in component attributes
