--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
        function submitForm() {
         const id = document.getElementById("id").value;
         localStorage.setItem("id", id);
-        window.location.href = "https://rohrat18.github.io/ExternalLWC/LightningOut.html";
+        window.location.href = "LightningOut.html";
 }
 
    </script>
