--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <form>
               <label for="id">Input the Id:</label>
               <input type="number" id="id" name="id">
-              <button onclick="submitForm()" type="submit">Submit</button>
+              <button onclick="submitForm()">Submit</button>
         </form>
 
     </body>
