--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 </script> -->
    <script>
        function submitForm() {
+        event.stopPropagation();
         const id = document.getElementById("id").value;
         localStorage.setItem("id", id);
         location.href = "https//google.com";
+           
 }
 
    </script>
