--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 }
 </script> -->
    <script>
-       function submitForm() {
-        event.stopPropagation();
-        const id = document.getElementById("id").value;
-        localStorage.setItem("id", id);
-        location.href = "https//google.com";
+//        function submitForm() {
+//         event.stopPropagation();
+//         const id = document.getElementById("id").value;
+//         localStorage.setItem("id", id);
+//         location.href = "https//google.com";
            
-}
+// }
 
    </script>
   
