--- a/demo.html
+++ b/demo.html
@@ -72,6 +72,8 @@
         <form>
               <label for="id">Input the Id:</label>
               <input type="number" id="id" name="id">
+            <label for="name">Input the Name:</label>
+              <input type="text" id="name" name="name">
               <button onclick="submitForm()">Submit</button>
         </form>
 
