--- a/LightningOut.html
+++ b/LightningOut.html
@@ -12,7 +12,7 @@
             const urlParams = new URLSearchParams(window.location.search);
             const id = localStorage.getItem("id");
 
-            const id = urlParams.get('id');
+//             const id = urlParams.get('id');
             console.log('Id-->'+id);       
         // Setting the id value in component attributes
             const componentAttributes = {
