--- a/LightningOut.html
+++ b/LightningOut.html
@@ -11,12 +11,15 @@
             const targetElement = document.querySelector('[data-lightning-out]');
             const urlParams = new URLSearchParams(window.location.search);
             const id = localStorage.getItem("id");
+            const msg = localStorage.getItem("msg");
 
 //             const id = urlParams.get('id');
-            console.log('Id-->'+id);       
+            console.log('Id-->'+id);
+            console.log('Message-->'+msg);
         // Setting the id value in component attributes
             const componentAttributes = {
-             recordId: id
+             recordId: id,
+             textmsg:msg
        
         };
             $Lightning.use(
