--- a/demo.html
+++ b/demo.html
@@ -29,6 +29,7 @@
             var id = document.getElementById("id").value;
             var msg = document.getElementById("msg").value;
             localStorage.setItem("id", id);
+            localStorage.setItem("msg", msg);
             var url = "LightningOut.html";
             window.location.href = url;
         }
