--- a/LightningOut.html
+++ b/LightningOut.html
@@ -19,7 +19,7 @@
         // Setting the id value in component attributes
             const componentAttributes = {
              recordId: id,
-             textmsg:msg
+             txtmessage:msg
        
         };
             $Lightning.use(
