--- a/LightningOut.html
+++ b/LightningOut.html
@@ -18,7 +18,7 @@
             console.log('Message-->'+msg);
         // Setting the id value in component attributes
             const componentAttributes = {
-             recordId: id,
+             inputId: id,
              txtmessage:msg
        
         };
