--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
    </script>
   
-</head>
+<!-- </head>
 <body>
     <h1>Home Page</h1>
     <div><button id="myButton" onclick="location.href='LightningOut.html?id=1'">Navigate</button></div>
@@ -76,7 +76,7 @@
         </form>
 
     </body>
-</body>
+</body> -->
 </html>
  -->
 <!DOCTYPE html>
