--- a/index.html
+++ b/index.html
@@ -10,20 +10,11 @@
             display: block;
             margin: 0 auto;
         }
-    </style>
-    <!-- <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js"></script>
-    <script>
-        function init() {
-            // Extract the value of the "message" URL parameter
-            const params = new URLSearchParams(window.location.search);
-            const message = params.get('message');
-            console.log('Message'+message);
-            // Embed the LWC in the page
-            const lwcElement = document.createElement('c:accountManageApex');
-            lwcElement.setAttribute('msg', message);
-            document.querySelector('#lwc-container').appendChild(lwcElement);
-        }
-    </script> -->
+        form {
+        margin: 0 auto;
+        width: 50%;
+      }
+    </style> 
     <script>
         function navigate() {
             var id = document.getElementById("id").value;
