--- a/LightningOut.html
+++ b/LightningOut.html
@@ -5,6 +5,13 @@
         <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js" type="text/javascript"></script>
         <div id='lwcElement' data-lightning-out="true"></div>
         <script>
+            var jsonData = JSON.parse(localStorage.getItem("formData"));
+
+    // Use the JSON data as needed
+             console.log(jsonData);
+
+    // Clear the stored JSON data from localStorage (optional)
+            localStorage.removeItem("formData");
             const appName = 'c:LightningOutApp'
             const componentName = 'c:accountManageApex'
             const lightningEndPoint = 'https://informatica29-dev-ed.develop.my.site.com'
