--- a/index.html
+++ b/index.html
@@ -16,54 +16,29 @@
       }
     </style> 
     <script>
-//         function navigate() {
-//             var id = document.getElementById("id").value;
-//             var msg = document.getElementById("msg").value;
-//             localStorage.setItem("id", id);
-//             localStorage.setItem("msg", msg);
-//             var url = "LightningOut.html";
-//             window.location.href = url;
-//         }
-      document.getElementById("myform").addEventListener("submit", function(event) {
-      event.preventDefault(); // Prevent form submission
-
-      // Capture form data
-      var formData = new FormData(this);
-
-      // Convert form data to JSON object
-      var jsonData = {};
-      formData.forEach(function(value, key) {
-        jsonData[key] = value;
-      });
-
-      // Store JSON data in localStorage
-      localStorage.setItem("formData", JSON.stringify(jsonData));
-
-      // Redirect to the target HTML page
-      window.location.href = "LightningOut.html";
-    });  
+        function navigate() {
+            var id = document.getElementById("id").value;
+            var msg = document.getElementById("msg").value;
+            localStorage.setItem("id", id);
+            localStorage.setItem("msg", msg);
+            var url = "LightningOut.html";
+            window.location.href = url;
+        }  
     </script>
 </head>
 <body>
     <h1>Home Page</h1>
     <div><button id="myButton" onclick="location.href='LightningOut.html?id=1'">Navigate</button></div>
     <body>
-<!--         <form id="myform">
-            <label for="id">Input the Id:</label>
-            <input type="number" id="id" name="id"><br>
-            <p></p>
-            <label for="msg">Input the Message:</label>
-            <input type="text" id="msg" name="msg"><br>
-            <button type="button" onclick="navigate()">Go</button>
-        </form> -->
         <form id="myform">
             <label for="id">Input the Id:</label>
             <input type="number" id="id" name="id"><br>
             <p></p>
             <label for="msg">Input the Message:</label>
             <input type="text" id="msg" name="msg"><br>
-            <button type="submit">Go</button>
+            <button type="button" onclick="navigate()">Go</button>
         </form>
+        
     </body>
 </body>
 </html>
