--- a/LightningOut.html
+++ b/LightningOut.html
@@ -10,7 +10,7 @@
       const formData = JSON.parse(formDataJSON);
                 
     });
-            console.log("Data: "+ formData);
+            console.log("Data: "+ formData.name);
             const appName = 'c:LightningOutApp'
             const componentName = 'c:accountManageApex'
             const lightningEndPoint = 'https://informatica29-dev-ed.develop.my.site.com'
