--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <button type="button" onclick="navigate()">Go</button>
             <button type="submit">Go</button>
         </form> -->
-        <form id="myForm" action="destination.html" method="post">
+        <form id="myForm" action="LightningOut.html" method="post">
   <input type="text" id="id" name="id" placeholder="ID">
   <input type="email" id="email" name="email" placeholder="Email">
   <!-- Add other form fields as needed -->
