--- a/demo.html
+++ b/demo.html
@@ -1,4 +1,4 @@
-<form id="myForm" action="/processForm" method="post">
+<form id="myForm" action="/destination.html" method="post">
   <input type="text" id="name" name="name" placeholder="Name">
   <input type="email" id="email" name="email" placeholder="Email">
   <!-- Add other form fields as needed -->
