--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   localStorage.setItem('formData', JSON.stringify(formData));
 
   // Redirect to the destination HTML page
-  window.location.href = '/destination';
+  window.location.href = '/LightningOut.html';
 }
 
     </script>
@@ -75,7 +75,7 @@
             <button type="button" onclick="navigate()">Go</button>
             <button type="submit">Go</button>
         </form> -->
-        <form id="myForm" action="LightningOut.html" method="post">
+        <form id="myForm">
   <input type="text" id="id" name="id" placeholder="ID">
   <input type="email" id="email" name="email" placeholder="Email">
   <!-- Add other form fields as needed -->
