--- a/LightningOut.html
+++ b/LightningOut.html
@@ -5,16 +5,19 @@
         <script src="https://informatica29-dev-ed.develop.my.site.com/lightning/lightning.out.js" type="text/javascript"></script>
         <div id='lwcElement' data-lightning-out="true"></div>
         <script>
-             window.addEventListener("DOMContentLoaded", function() {
-    // Retrieve the JSON data from the form input
-    var jsonData = document.querySelector("input[name='jsonData']").value;
+             var jsonData = localStorage.getItem('formData');
+
+  if (jsonData) {
+    // Parse the JSON data into a JavaScript object
     var formData = JSON.parse(jsonData);
 
     // Access the form data
-    console.log(formData.id);
-    console.log(formData.email);
+    document.getElementById("capturedData").value = formData.name + " - " + formData.email;
     // Access other form fields as needed
-  });
+  } else {
+    console.log('No form data found.');
+  }
+
             const appName = 'c:LightningOutApp'
             const componentName = 'c:accountManageApex'
             const lightningEndPoint = 'https://informatica29-dev-ed.develop.my.site.com'
