--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <button type="submit">Go</button>
         </form> -->
         <form id="myForm">
-  <input type="text" id="id" name="id" placeholder="ID">
+  <input type="text" id="name" name="id" placeholder="ID">
   <input type="email" id="email" name="email" placeholder="Email">
   <!-- Add other form fields as needed -->
 <!--   <button type="submit">Submit</button> -->
