--- a/LightningOut.html
+++ b/LightningOut.html
@@ -12,7 +12,7 @@
     var formData = JSON.parse(jsonData);
 
     // Access the form data
-    document.getElementById("capturedData").value = formData.name + " - " + formData.email;
+    Console.log(formData.name + " - " + formData.email);
     // Access other form fields as needed
   } else {
     console.log('No form data found.');
