--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   localStorage.setItem('formData', JSON.stringify(formData));
 
   // Redirect to the destination HTML page
-  window.location.href = '/LightningOut.html';
+  window.location.href = 'LightningOut.html';
 }
 
     </script>
