--- a/LightningOut.html
+++ b/LightningOut.html
@@ -28,8 +28,8 @@
 
 //             const id = urlParams.get('id');
             console.log(formData.name+'---'+formData.email);
-            console.log('Id-->'+id);
-            console.log('Message-->'+msg);
+//             console.log('Id-->'+id);
+//             console.log('Message-->'+msg);
         // Setting the id value in component attributes
             const componentAttributes = {
              inputid: formData.name,
